--- a/notebooks/DLP_Week_1.ipynb
+++ b/notebooks/DLP_Week_1.ipynb
@@ -1,8 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Week 1"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,8 +53,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Q1.** Download the dataset https://huggingface.co/datasets/ai4bharat/naamapadam from the hub and choose all the correct statements about the dataset. <br>\n",
+        "Note: You could answer some of the questions by directly visiting the given link. However, we strongly recommend you to use the suitable functions in datasets modules to get the info about the dataset."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "X68jMX7Olsax"
       },
@@ -68,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,11 +93,18 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Using the latest cached version of the dataset since ai4bharat/naamapadam couldn't be found on the Hugging Face Hub\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "No. of configs - 11\n",
-            "Names of configs - ['as', 'bn', 'gu', 'hi', 'kn', 'ml', 'mr', 'or', 'pa', 'ta', 'te']\n"
+            "No. of configs - 1\n",
+            "Names of configs - ['default']\n"
           ]
         }
       ],
@@ -101,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "vtAvvUeloFXL"
       },
@@ -113,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -192,6 +214,20 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Using the latest cached version of the dataset since ai4bharat/naamapadam couldn't be found on the Hugging Face Hub\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Found the latest cached dataset configuration 'ta' at C:\\Users\\dell\\.cache\\huggingface\\datasets\\ai4bharat___naamapadam\\ta\\1.0.0\\9d4f21ac57d11ed4f9ea64854fdc9f5618e61acc (last modified on Thu Jan 23 21:12:08 2025).\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
               "DatasetDict({\n",
@@ -210,7 +246,7 @@
               "})"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -222,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -237,7 +273,7 @@
               "501435"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -248,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -265,8 +301,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Q2**:Download the **training split** of the tamil (ta) subset of the dataset and store in a variable named “ds”."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "gbAdeg9m1ceP"
       },
@@ -277,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -305,18 +348,19 @@
               "})"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "ds"
+        "ds\n",
+        "# ds.cache_files"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -347,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,8 +428,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Q6: Count number of tokens:** <br>\n",
+        "Create a new column named ``num\\_tokens\". Compute the number of tokens (words) in each sample and keep it in the newly created column. How many tokens (in millions) are there in the entire dataset?"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -413,7 +465,7 @@
               "})"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -429,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -458,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -496,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -511,7 +563,7 @@
               "2.0214603464560215"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -531,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -561,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "id": "M7WwJevr48gw"
       },
@@ -577,7 +629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -609,7 +661,7 @@
               "})"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -624,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -642,7 +694,7 @@
               "})"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -664,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -714,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -753,7 +805,7 @@
               "})"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -779,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -803,11 +855,18 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Using the latest cached version of the dataset since ai4bharat/indic_glue couldn't be found on the Hugging Face Hub\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "No. of configs - 61\n",
-            "Names of configs - ['actsa-sc.te', 'bbca.hi', 'copa.en', 'copa.gu', 'copa.hi', 'copa.mr', 'csqa.as', 'csqa.bn', 'csqa.gu', 'csqa.hi', 'csqa.kn', 'csqa.ml', 'csqa.mr', 'csqa.or', 'csqa.pa', 'csqa.ta', 'csqa.te', 'cvit-mkb-clsr.en-bn', 'cvit-mkb-clsr.en-gu', 'cvit-mkb-clsr.en-hi', 'cvit-mkb-clsr.en-ml', 'cvit-mkb-clsr.en-mr', 'cvit-mkb-clsr.en-or', 'cvit-mkb-clsr.en-ta', 'cvit-mkb-clsr.en-te', 'cvit-mkb-clsr.en-ur', 'iitp-mr.hi', 'iitp-pr.hi', 'inltkh.gu', 'inltkh.ml', 'inltkh.mr', 'inltkh.ta', 'inltkh.te', 'md.hi', 'sna.bn', 'wiki-ner.as', 'wiki-ner.bn', 'wiki-ner.gu', 'wiki-ner.hi', 'wiki-ner.kn', 'wiki-ner.ml', 'wiki-ner.mr', 'wiki-ner.or', 'wiki-ner.pa', 'wiki-ner.ta', 'wiki-ner.te', 'wnli.en', 'wnli.gu', 'wnli.hi', 'wnli.mr', 'wstp.as', 'wstp.bn', 'wstp.gu', 'wstp.hi', 'wstp.kn', 'wstp.ml', 'wstp.mr', 'wstp.or', 'wstp.pa', 'wstp.ta', 'wstp.te']\n"
+            "No. of configs - 1\n",
+            "Names of configs - ['default']\n"
           ]
         }
       ],
@@ -817,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -826,6 +885,14 @@
         "outputId": "379d4a7b-e2fd-41cc-9e35-4e994754a8b6"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Using the latest cached version of the dataset since ai4bharat/indic_glue couldn't be found on the Hugging Face Hub\n",
+            "Found the latest cached dataset configuration 'inltkh.ta' at C:\\Users\\dell\\.cache\\huggingface\\datasets\\ai4bharat___indic_glue\\inltkh.ta\\0.0.0\\6dcbebd49d6b12965d433bffcd07e9a786211703 (last modified on Thu Jan 23 21:12:24 2025).\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -882,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -906,27 +973,34 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Filter: 100%|██████████| 6684/6684 [00:00<00:00, 110277.43 examples/s]\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
               "Dataset({\n",
               "    features: ['text', 'label'],\n",
-              "    num_rows: 6416\n",
+              "    num_rows: 6428\n",
               "})"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "fil_ds2 = ds2.filter(lambda example: len(example[\"text\"].split()) >= 6 )\n",
+        "fil_ds2 = ds2.filter(lambda example: len(example[\"text\"].split(' ')) >=6 )\n",
         "fil_ds2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -940,11 +1014,11 @@
             "text/plain": [
               "Dataset({\n",
               "    features: ['num_tokens', 'text', 'label'],\n",
-              "    num_rows: 32290\n",
+              "    num_rows: 32354\n",
               "})"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
