--- a/notebooks/DLP_Week_1.ipynb
+++ b/notebooks/DLP_Week_1.ipynb
@@ -9,6 +9,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "import os\n",
+        "import contextlib\n",
+        "\n",
+        "# Suppress output for pip show and pip install\n",
+        "with open(os.devnull, 'w') as fnull, contextlib.redirect_stdout(fnull), contextlib.redirect_stderr(fnull):\n",
+        "    get_ipython().system('%pip show datasets || pip install datasets')\n",
+        "    get_ipython().system('%pip show transformers || pip install transformers')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "colab": {
