--- a/_sources/notebooks/DLP_Week_1.ipynb
+++ b/_sources/notebooks/DLP_Week_1.ipynb
@@ -72,7 +72,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Q1.** Download the dataset https://huggingface.co/datasets/ai4bharat/naamapadam from the hub and choose all the correct statements about the dataset. <br>\n",
+        "## Q1. Download the dataset\n",
+        "https://huggingface.co/datasets/ai4bharat/naamapadam from the hub and choose all the correct statements about the dataset.\n",
         "Note: You could answer some of the questions by directly visiting the given link. However, we strongly recommend you to use the suitable functions in datasets modules to get the info about the dataset."
       ]
     },
@@ -268,7 +269,7 @@
         }
       ],
       "source": [
-        "ta = datasets.load_dataset(\"ai4bharat/naamapadam\", \"ta\")\n",
+        "ta = datasets.load_dataset(\"ai4bharat/naamapadam\", \"ta\", disable_progress_bar=True)\n",
         "ta"
       ]
     },
@@ -320,7 +321,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Q2**:Download the **training split** of the tamil (ta) subset of the dataset and store in a variable named “ds”."
+        "## **Q2**: Download the **training split** \n",
+        "of the tamil (ta) subset of the dataset and store in a variable named “ds”."
       ]
     },
     {
@@ -447,7 +449,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Q6: Count number of tokens:** <br>\n",
+        "## 6: Count number of tokens:\n",
         "Create a new column named ``num\\_tokens\". Compute the number of tokens (words) in each sample and keep it in the newly created column. How many tokens (in millions) are there in the entire dataset?"
       ]
     },
@@ -491,7 +493,7 @@
         "  example['num_tokens'] = len(example['tokens'])\n",
         "  return example\n",
         "\n",
-        "ds = ds.map(cnot)\n",
+        "ds = ds.map(cnot, disable_progress_bar=True)\n",
         "ds"
       ]
     },
@@ -594,7 +596,8 @@
         "id": "YDrocM3OykoE"
       },
       "source": [
-        "7) Concatenate all the samples across the splits in the following order: [train:test:validation]. Currently, each sample contains a list of words (tokens). Create a sentence by joining the individual words (tokens) in each sample using a single white space as a delimiter and store the re\u0002sulting sample in a new column named “text”. Create a new dataset by removing the columns “ner tags” and “tokens”. Store the new dataset in the same variable “ds”. Enter the total number of samples in “ds”"
+        "## 7) Concatenate \n",
+        "all the samples across the splits in the following order: [train:test:validation]. Currently, each sample contains a list of words (tokens). Create a sentence by joining the individual words (tokens) in each sample using a single white space as a delimiter and store the re\u0002sulting sample in a new column named “text”. Create a new dataset by removing the columns “ner tags” and “tokens”. Store the new dataset in the same variable “ds”. Enter the total number of samples in “ds”"
       ]
     },
     {
@@ -686,7 +689,7 @@
         "def modi(sample):\n",
         "  sample['text'] = \" \".join(sample['tokens'])\n",
         "  return sample\n",
-        "ds = ds.map(modi)\n",
+        "ds = ds.map(modi, disable_progress_bar=True)\n",
         "ds"
       ]
     },
@@ -727,7 +730,8 @@
         "id": "tSf-w9v36Hsi"
       },
       "source": [
-        "8) Each modification to the dataset introduces new cache file in the cache directory, thereby increasing the disk space. The statement is"
+        "## 8) Cache\n",
+        "Each modification to the dataset introduces new cache file in the cache directory, thereby increasing the disk space. The statement is"
       ]
     },
     {
@@ -777,7 +781,8 @@
         "id": "UNqzurv58MOH"
       },
       "source": [
-        "9) Filter the dataset so that all the samples in the dataset should have at least six tokens (any symbol separated by a white space is considered a token). Enter the number of samples in the dataset after filtering. Enter the exact number. If the answer is 123456, enter it as 123456."
+        "## 9) Filter \n",
+        "the dataset so that all the samples in the dataset should have at least six tokens (any symbol separated by a white space is considered a token). Enter the number of samples in the dataset after filtering. Enter the exact number. If the answer is 123456, enter it as 123456."
       ]
     },
     {
@@ -839,7 +844,8 @@
         "id": "wDCRAsMP9lwv"
       },
       "source": [
-        "10) Download all the splits of Tamil sub-dataset “inltkh.ta” of https://huggingface.co/datasets/ai4bharat/indic_glue .\n",
+        "## 10) Interleve\n",
+        "Download all the splits of Tamil sub-dataset “inltkh.ta” of https://huggingface.co/datasets/ai4bharat/indic_glue .\n",
         "\n",
         "Filter the dataset so that each sample contains at least six words (separated by a single white space).Then Interleave the resultant dataset with the above filtered dataset of naamapadam. Take 80% of samples from naamapadam and 20% from indic glue. Enter the number of samples after interleaving the datasets.\n",
         "Note: Set the value of the seed argument to 42."
@@ -922,7 +928,7 @@
       ],
       "source": [
         "try:\n",
-        "    ds2 = datasets.load_dataset(\"ai4bharat/indic_glue\", \"inltkh.ta\", split=\"all\")\n",
+        "    ds2 = datasets.load_dataset(\"ai4bharat/indic_glue\", \"inltkh.ta\", split=\"all\", disable_progress_bar=True)\n",
         "    print(ds2)\n",
         "except Exception as e:\n",
         "  print(f\"ERROR: {e}\")"
