--- a/_sources/notebooks/DLP_Week_1.ipynb
+++ b/_sources/notebooks/DLP_Week_1.ipynb
@@ -269,7 +269,7 @@
         }
       ],
       "source": [
-        "ta = datasets.load_dataset(\"ai4bharat/naamapadam\", \"ta\", disable_progress_bar=True)\n",
+        "ta = datasets.load_dataset(\"ai4bharat/naamapadam\", \"ta\",trust_remote_code=True, disable_progress_bar=True)\n",
         "ta"
       ]
     },
