--- a/_sources/notebooks/DLP_Week_3.ipynb
+++ b/_sources/notebooks/DLP_Week_3.ipynb
@@ -25,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -275,23 +267,7 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "----------------------------------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "BertForMaskedLM has generative capabilities, as `prepare_inputs_for_generation` is explicitly overwritten. However, it doesn't directly inherit from `GenerationMixin`. From 👉v4.50👈 onwards, `PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
-      "  - If you're using `trust_remote_code=True`, you can get rid of this warning by loading the model with an auto class. See https://huggingface.co/docs/transformers/en/model_doc/auto#auto-classes\n",
-      "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
-      "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
       "BertForMaskedLM(\n",
       "  (bert): BertModel(\n",
       "    (embeddings): BertEmbeddings(\n",
@@ -355,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +360,7 @@
        "132801024"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -442,6 +418,182 @@
     "Store the resulting dataset in the variable “ds_chunked”. Enter the total number of samples in the new dataset.\n",
     "Note: the batch size should be kept at 1000 while calling \"ds.map()\" for theanswer to match.\n",
     "<b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=12): 100%|██████████| 700000/700000 [10:51<00:00, 1074.69 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chunk(samples, tokenizer = bert_tokenizer):\n",
+    "    samples = tokenizer(samples['text'])\n",
+    "    concat_inps = sum([seq for seq in samples['input_ids']],[])\n",
+    "    total_tokens = len(concat_inps)\n",
+    "    num_contx_samples = total_tokens // 512\n",
+    "\n",
+    "    inp_id_list, att_mask_list = [], []\n",
+    "    for i in range(0, num_contx_samples):\n",
+    "        inp_ids = concat_inps[i*512:(i+1)*512]\n",
+    "        att_masks = [1]*512\n",
+    "        inp_id_list.append(inp_ids)\n",
+    "        att_mask_list.append(att_masks)\n",
+    "    \n",
+    "    return {'input_ids': inp_id_list, 'attention_mask': att_mask_list}\n",
+    "\n",
+    "ds_chunked = ds.map(chunk,\n",
+    "    batch_size=1000,\n",
+    "    batched = True,\n",
+    "    num_proc = procs,\n",
+    "    remove_columns = ['label', 'text', 'num_word'])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['input_ids', 'attention_mask'],\n",
+       "    num_rows: 246703\n",
+       "})"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_chunked"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6\n",
+    "<b>\n",
+    "\n",
+    "- Split the new dataset into training and test sets with the test_size=0.05 and seed=42.\n",
+    "- Use the appropriate data collator function for the MLM objective and set the masking probability to 0.2. \n",
+    "- Use the data loader from PyTorch to load a batch of samples, and enter the token ID corresponding to the unmasked token\n",
+    "</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'attention_mask': tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
+      "        [1, 1, 1,  ..., 1, 1, 1]]),\n",
+      " 'input_ids': tensor([[ 103, 2070, 2052,  ..., 2015, 1010,  103],\n",
+      "        [2074,  103, 2001,  ..., 1013, 7479, 1012]]),\n",
+      " 'labels': tensor([[3241, -100, -100,  ..., -100, -100, 5404],\n",
+      "        [-100, 2003, -100,  ..., -100, -100, -100]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import DataCollatorForLanguageModeling\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "ds_split = ds_chunked.train_test_split(test_size = 0.5, seed=42)\n",
+    "data_collator = DataCollatorForLanguageModeling(bert_tokenizer,\n",
+    "                mlm = True,\n",
+    "                mlm_probability = 0.2)\n",
+    "dataloader = DataLoader(dataset = ds_split['train'],\n",
+    "                collate_fn = data_collator,\n",
+    "                batch_size=2)\n",
+    "pprint(next(iter(dataloader)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7\n",
+    "<b>Create a small BERT model by changing the following hyper-parameters and keeping the other hyper-parameters as it is\n",
+    "- num_hidden_layers = 6\n",
+    "- hidden size: 384\n",
+    "- intermediate_size: 1536\n",
+    "\n",
+    "and start training the model with a batch of size 8 for an epoch. What is the loss value at the end of the training?\n",
+    "\n",
+    "Note: You may optionally save the checkpoints for every N-th step.<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Define bert Config\n",
+    "2. load bert\n",
+    "3. tokenize ds\n",
+    "4. Data collator\n",
+    "5. Data Loader\n",
+    "6. Setup (optimize)\n",
+    "7. Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# config_small = BertConfig(num_hidden_layers=6,\n",
+    "#                             hidden_size = 384,\n",
+    "#                             intermediate_size=1536)\n",
+    "\n",
+    "# bert_small = BertForMaskedLM(config_small)\n",
+    "# print(bert_small)\n",
+    "\n",
+    "# def tokenize(samples, tokenizer=bert_tokenizer):\n",
+    "#     return tokenizer(samples['text'])\n",
+    "\n",
+    "# train_ds = ds.map(tokenize, batch_size=8, batched=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['label', 'text', 'num_word'],\n",
+       "    num_rows: 700000\n",
+       "})"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds"
    ]
   }
  ],
