--- a/notebooks/DLP_Week_3.ipynb
+++ b/notebooks/DLP_Week_3.ipynb
@@ -20,12 +20,12 @@
     "- D. “Cheesy-melty-roasted-cauliflower-with-fresh-bread-crumbs-on top.\\\\nTo-die-for.” is one of the single words in the dataset\n",
     "- E. The average length of a sample is 134.1\n",
     "- F. The distribution of the length of the samples is right skewed\n",
-    "<b>"
+    "</b>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "try:\n",
-    "    ds = load_dataset(\"Yelp/yelp_review_full\", split=\"all\")\n",
+    "    ds = load_dataset(\"Yelp/yelp_review_full\", split=\"all\", disable_progress_bar=True)\n",
     "    print(ds)\n",
     "except Exception as e:\n",
     "    print(\"ERROR:\",e)"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +73,13 @@
     "def modify(sample):\n",
     "    sample['num_word'] = len(sample['text'].split())\n",
     "    return sample\n",
-    "ds = ds.map(modify, batch_size=7000, num_proc=procs)    \n",
+    "ds = ds.map(modify, batch_size=7000, num_proc=procs, disable_progress_bar=True)    \n",
     "print(ds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
     "    print(f\"samples > 1 word = {np.sum(np.array(num_words)==1)}\")\n",
     "    print(f\"average sample length = {total_words/ds.num_rows}\")\n",
     "    st = 'Cheesy-melty-roasted-cauliflower-with-fresh-bread-crumbs-on-top.\\\\nTo-die-for.'\n",
-    "    fil_ds = ds.filter(lambda sample, st=st: sample['text'] == st, num_proc=procs)\n",
+    "    fil_ds = ds.filter(lambda sample, st=st: sample['text'] == st, num_proc=procs, disable_progress_bar=True)\n",
     "    print(f\"has {st} = {len(fil_ds)}\")\n",
     "    plt.figure(figsize=(5,2))\n",
     "    plt.hist(num_words)\n",
@@ -134,7 +134,7 @@
     "- D. Tokenizer inserts all the special tokens when it processes a single sample as an input\n",
     "- E. Tokenizer inserts [CLS] and [SEP] special tokens when it processes a single sample as an input\n",
     "- F. Tokenizer inserts only [CLS]special token when it processes a single sample as an input\n",
-    "<b>"
+    "</b>"
    ]
   },
   {
@@ -234,7 +234,7 @@
     "- B. The model has 6 Bert layers\n",
     "- C. The model uses absolute position embeddings\n",
     "- D. The word embedding (token embedding) layer has about 23 million learnable parameters\n",
-    "- E. The total number of parameters in the model is close to 110 million<b>"
+    "- E. The total number of parameters in the model is close to 110 million</b>"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "source": [
     "## 4\n",
-    "<b>Double the context length from 512 to 1024 (you can change it in the configuration). Count the number of parameters and enter the change in the number of parameters (in millions) compared to the default configuration.<b>"
+    "<b>Double the context length from 512 to 1024 (you can change it in the configuration). Count the number of parameters and enter the change in the number of parameters (in millions) compared to the default configuration.</b>"
    ]
   },
   {
@@ -417,7 +417,7 @@
     " \n",
     "Store the resulting dataset in the variable “ds_chunked”. Enter the total number of samples in the new dataset.\n",
     "Note: the batch size should be kept at 1000 while calling \"ds.map()\" for theanswer to match.\n",
-    "<b>"
+    "</b>"
    ]
   },
   {
@@ -453,7 +453,8 @@
     "    batch_size=1000,\n",
     "    batched = True,\n",
     "    num_proc = procs,\n",
-    "    remove_columns = ['label', 'text', 'num_word'])    "
+    "    remove_columns = ['label', 'text', 'num_word'],\n",
+    "    disable_progress_bar=True)    "
    ]
   },
   {
@@ -536,7 +537,7 @@
     "\n",
     "and start training the model with a batch of size 8 for an epoch. What is the loss value at the end of the training?\n",
     "\n",
-    "Note: You may optionally save the checkpoints for every N-th step.<b>"
+    "Note: You may optionally save the checkpoints for every N-th step.</b>"
    ]
   },
   {
